testdata/baselines/reference/submodule/compiler/jsFileClassSelfReferencedProperty.errors.txt
foo.js(3,10): error TS2339: Property 'testStackOverflow' does not exist on type 'StackOverflowTest'.
foo.js(3,35): error TS2339: Property 'testStackOverflow' does not exist on type 'StackOverflowTest'.


==== foo.js (2 errors) ====
    export class StackOverflowTest {
      constructor () {
        this.testStackOverflow = this.testStackOverflow.bind(this)
             ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'testStackOverflow' does not exist on type 'StackOverflowTest'.
                                      ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'testStackOverflow' does not exist on type 'StackOverflowTest'.
      }
    }
    